crates/tankan/tests/snapshots/corpus_test__svg_class_10-cssclass.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-class" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 275.5 197" width="275.5" height="197" role="img" aria-label="Class diagram" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-class { fill: #ffffff; stroke: #d1d9e0; }
.tankan .tk-class-title { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-class-name { font-weight: bold; }
.tankan .tk-class-anno { fill: #59636e; font-style: italic; }
.tankan .tk-class-line { stroke: #d1d9e0; }
.tankan .tk-rel { stroke: #1f2328; fill: none; }
.tankan .tk-marker { fill: #ffffff; stroke: #1f2328; stroke-width: 1.2; }
.tankan .tk-marker-fill { fill: #1f2328; stroke: #1f2328; stroke-width: 1.2; }
.tankan .tk-marker-open { fill: none; stroke: #1f2328; stroke-width: 1.2; }
.tankan .tk-rel-label rect { fill: #ffffff; stroke: none; }
.tankan .tk-card { fill: #59636e; }
</style>
<defs>
<marker id="tk-cls-tri" viewBox="0 0 20 16" refX="18" refY="8" markerWidth="20" markerHeight="16" orient="auto-start-reverse"><path class="tk-marker" d="M2,2 L18,8 L2,14 Z"/></marker>
<marker id="tk-cls-diamond" viewBox="0 0 24 12" refX="22" refY="6" markerWidth="24" markerHeight="12" orient="auto-start-reverse"><path class="tk-marker-fill" d="M22,6 L12,2 L2,6 L12,10 Z"/></marker>
<marker id="tk-cls-odiamond" viewBox="0 0 24 12" refX="22" refY="6" markerWidth="24" markerHeight="12" orient="auto-start-reverse"><path class="tk-marker" d="M22,6 L12,2 L2,6 L12,10 Z"/></marker>
<marker id="tk-cls-arrow" viewBox="0 0 16 12" refX="14" refY="6" markerWidth="14" markerHeight="12" orient="auto-start-reverse"><path class="tk-marker-open" d="M2,2 L14,6 L2,10"/></marker>
</defs>
<path class="tk-rel" d="M 154.5,95 L 86.5,145" marker-start="url(#tk-cls-tri)"/>
<path class="tk-rel" d="M 205,95 L 205,145" marker-start="url(#tk-cls-tri)"/>
<rect class="tk-class" x="154.5" y="20" width="101.5" height="75" style="fill:#f96;stroke:#333;stroke-width:2px"/>
<rect class="tk-class-title" x="154.5" y="20" width="101.5" height="31.5" style="fill:#f96;stroke:#333;stroke-width:2px"/>
<text class="tk-class-name" x="205" y="38" text-anchor="middle" style="fill:#1f2328">Shape</text>
<line class="tk-class-line" x1="154.5" y1="63.5" x2="255.5" y2="63.5" style="stroke:#333;stroke-width:2px"/>
<text class="tk-class-member" x="166.5" y="81.5" text-anchor="start" style="fill:#1f2328">+draw() void</text>
<rect class="tk-class" x="20" y="145" width="90" height="31.5" style="fill:#f96;stroke:#333;stroke-width:2px"/>
<rect class="tk-class-title" x="20" y="145" width="90" height="31.5" style="fill:#f96;stroke:#333;stroke-width:2px"/>
<text class="tk-class-name" x="65" y="163" text-anchor="middle" style="fill:#1f2328">Circle</text>
<rect class="tk-class" x="160" y="145" width="90" height="31.5" style="fill:#f96;stroke:#333;stroke-width:2px"/>
<rect class="tk-class-title" x="160" y="145" width="90" height="31.5" style="fill:#f96;stroke:#333;stroke-width:2px"/>
<text class="tk-class-name" x="205" y="163" text-anchor="middle" style="fill:#1f2328">Square</text>
</svg>
