crates/tankan/tests/snapshots/corpus_test__svg_er_07-japanese.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-er" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 397 416.5" width="397" height="416.5" role="img" aria-label="注文管理の ER 図" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-entity { fill: #ffffff; stroke: #d1d9e0; }
.tankan .tk-entity-title { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-entity-title-text { font-weight: bold; }
.tankan .tk-entity-line { stroke: #d1d9e0; }
.tankan .tk-entity-key { fill: #9a6700; }
.tankan .tk-entity-comment { fill: #59636e; }
.tankan .tk-rel { stroke: #1f2328; fill: none; }
.tankan .tk-card { stroke: #1f2328; fill: none; stroke-width: 1.2; }
.tankan .tk-card-zero { stroke: #1f2328; fill: #ffffff; stroke-width: 1.2; }
.tankan .tk-rel-label rect { fill: #ffffff; stroke: none; }
</style>
<defs>
<marker id="tk-one" viewBox="0 0 12 12" refX="10" refY="6" markerWidth="14" markerHeight="14" orient="auto-start-reverse"><path class="tk-card" d="M4,2 V10 M7,2 V10"/></marker>
<marker id="tk-zeroone" viewBox="0 0 12 12" refX="10" refY="6" markerWidth="14" markerHeight="14" orient="auto-start-reverse"><circle class="tk-card-zero" cx="3.5" cy="6" r="2.3"/><path class="tk-card" d="M8,2 V10"/></marker>
<marker id="tk-onemany" viewBox="0 0 12 12" refX="11" refY="6" markerWidth="14" markerHeight="14" orient="auto-start-reverse"><path class="tk-card" d="M3,2 V10 M5,6 L11,2 M5,6 L11,6 M5,6 L11,10"/></marker>
<marker id="tk-zeromany" viewBox="0 0 12 12" refX="11" refY="6" markerWidth="14" markerHeight="14" orient="auto-start-reverse"><circle class="tk-card-zero" cx="3" cy="6" r="2.3"/><path class="tk-card" d="M5.5,6 L11,2 M5.5,6 L11,6 M5.5,6 L11,10"/></marker>
</defs>
<path class="tk-rel" d="M 198.5,144.5 L 198.5,202 Q 198.5,208 198.5,214 L 198.5,272" marker-start="url(#tk-one)" marker-end="url(#tk-zeromany)"/>
<g class="tk-rel-label">
<rect class="" x="180.5" y="196.5" width="36" height="23.5"/>
<text class="" x="198.5" y="210.5" text-anchor="middle">発注</text>
</g>
<rect class="tk-entity" x="20" y="20" width="357" height="124.5"/>
<rect class="tk-entity-title" x="20" y="20" width="357" height="35.5"/>
<text class="tk-entity-title-text" x="198.5" y="42.5" text-anchor="middle">顧客</text>
<text class="tk-entity-cell" x="30" y="75.5" text-anchor="start">int</text>
<text class="tk-entity-cell" x="84" y="75.5" text-anchor="start">顧客番号</text>
<text class="tk-entity-key" x="160" y="75.5" text-anchor="start">PK</text>
<line class="tk-entity-line" x1="20" y1="85" x2="377" y2="85"/>
<text class="tk-entity-cell" x="30" y="105" text-anchor="start">string</text>
<text class="tk-entity-cell" x="84" y="105" text-anchor="start">氏名</text>
<line class="tk-entity-line" x1="20" y1="115" x2="377" y2="115"/>
<text class="tk-entity-cell" x="30" y="134.5" text-anchor="start">string</text>
<text class="tk-entity-cell" x="84" y="134.5" text-anchor="start">住所</text>
<text class="tk-entity-comment" x="199" y="134.5" text-anchor="start">配送先と同じとは限らない</text>
<line class="tk-entity-line" x1="74" y1="55.5" x2="74" y2="144.5"/>
<line class="tk-entity-line" x1="150" y1="55.5" x2="150" y2="144.5"/>
<line class="tk-entity-line" x1="189" y1="55.5" x2="189" y2="144.5"/>
<rect class="tk-entity" x="117.5" y="272" width="162" height="124.5"/>
<rect class="tk-entity-title" x="117.5" y="272" width="162" height="35.5"/>
<text class="tk-entity-title-text" x="198.5" y="294.5" text-anchor="middle">注文 履歴</text>
<text class="tk-entity-cell" x="127.5" y="327.5" text-anchor="start">int</text>
<text class="tk-entity-cell" x="174.5" y="327.5" text-anchor="start">注文番号</text>
<text class="tk-entity-key" x="250.5" y="327.5" text-anchor="start">PK</text>
<line class="tk-entity-line" x1="117.5" y1="337" x2="279.5" y2="337"/>
<text class="tk-entity-cell" x="127.5" y="357" text-anchor="start">int</text>
<text class="tk-entity-cell" x="174.5" y="357" text-anchor="start">顧客番号</text>
<text class="tk-entity-key" x="250.5" y="357" text-anchor="start">FK</text>
<line class="tk-entity-line" x1="117.5" y1="367" x2="279.5" y2="367"/>
<text class="tk-entity-cell" x="127.5" y="386.5" text-anchor="start">date</text>
<text class="tk-entity-cell" x="174.5" y="386.5" text-anchor="start">注文日</text>
<line class="tk-entity-line" x1="164.5" y1="307.5" x2="164.5" y2="396.5"/>
<line class="tk-entity-line" x1="240.5" y1="307.5" x2="240.5" y2="396.5"/>
</svg>
