crates/tankan/tests/snapshots/corpus_test__svg_flowchart_01-basic.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-flowchart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 215.5 425.5" width="215.5" height="425.5" role="img" aria-label="Flowchart" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-node { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-node-line { stroke: #d1d9e0; fill: none; }
.tankan .tk-edge { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-edge-label rect { fill: #ffffff; stroke: none; }
.tankan .tk-cluster { fill: #f6f8fa; fill-opacity: 0.4; stroke: #d1d9e0; }
.tankan .tk-cluster-title { fill: #59636e; }
.tankan .tk-region { fill: none; stroke: #d1d9e0; stroke-dasharray: 4,4; }
.tankan .tk-state-dot { fill: #1f2328; stroke: none; }
.tankan .tk-notebox { fill: #f6f8fa; stroke: #d1d9e0; stroke-dasharray: 3,3; }
</style>
<defs>
<marker id="tk-arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-circle" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><circle class="tk-head-fill" cx="5" cy="5" r="4"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<path class="tk-edge" d="M 147.5,63.5 L 147.5,108 Q 147.5,114 147.5,120 L 147.5,164.5" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 127,219.5 L 49.5,294 Q 45,298 45,304 L 45,362" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="29" y="286.5" width="32" height="23.5"/>
<text class="" x="45" y="300.5" text-anchor="middle">Yes</text>
</g>
<path class="tk-edge" d="M 147.5,234.5 L 147.5,292 Q 147.5,298 147.5,304 L 147.5,362" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="134.5" y="286.5" width="26" height="23.5"/>
<text class="" x="147.5" y="300.5" text-anchor="middle">No</text>
</g>
<rect class="tk-node" x="118" y="20" width="59.5" height="43.5"/>
<text class="tk-node-label" x="147.5" y="44" text-anchor="middle">Start</text>
<polygon class="tk-node" points="147.5,164.5 195.5,199.5 147.5,234.5 100,199.5"/>
<text class="tk-node-label" x="147.5" y="201.5" text-anchor="middle">Is it?</text>
<rect class="tk-node" x="20" y="362" width="50" height="43.5"/>
<text class="tk-node-label" x="45" y="386" text-anchor="middle">OK</text>
<rect class="tk-node" x="120" y="362" width="55" height="43.5"/>
<text class="tk-node-label" x="147.5" y="386" text-anchor="middle">End</text>
</svg>
