crates/tankan/tests/snapshots/corpus_test__svg_flowchart_02-lr.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-flowchart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 868 190.5" width="868" height="190.5" role="img" aria-label="Flowchart" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-node { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-node-line { stroke: #d1d9e0; fill: none; }
.tankan .tk-edge { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-edge-label rect { fill: #ffffff; stroke: none; }
.tankan .tk-cluster { fill: #f6f8fa; fill-opacity: 0.4; stroke: #d1d9e0; }
.tankan .tk-cluster-title { fill: #59636e; }
.tankan .tk-region { fill: none; stroke: #d1d9e0; stroke-dasharray: 4,4; }
.tankan .tk-state-dot { fill: #1f2328; stroke: none; }
.tankan .tk-notebox { fill: #f6f8fa; stroke: #d1d9e0; stroke-dasharray: 3,3; }
</style>
<defs>
<marker id="tk-arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-circle" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><circle class="tk-head-fill" cx="5" cy="5" r="4"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<path class="tk-edge" d="M 115.5,135.5 L 189.5,135.5 Q 195.5,135.5 201.5,135.5 L 275.5,135.5" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="165.5" y="123.5" width="60" height="23.5"/>
<text class="" x="195.5" y="137.5" text-anchor="middle">Link text</text>
</g>
<path class="tk-edge" d="M 382,135.5 L 426.5,135.5 Q 432.5,135.5 438.5,135.5 L 483,135.5" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 578.5,115.5 L 679,45 Q 684,42 690,42 L 751,42" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="666.5" y="30" width="34.5" height="23.5"/>
<text class="" x="684" y="44" text-anchor="middle">One</text>
</g>
<path class="tk-edge" d="M 616.5,135.5 L 678,135.5 Q 684,135.5 690,135.5 L 752,135.5" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="666.5" y="123.5" width="34.5" height="23.5"/>
<text class="" x="684" y="137.5" text-anchor="middle">Two</text>
</g>
<rect class="tk-node" x="20" y="113.5" width="95.5" height="43.5"/>
<text class="tk-node-label" x="67.5" y="137.5" text-anchor="middle">Hard edge</text>
<rect class="tk-node" x="275.5" y="113.5" width="106.5" height="43.5" rx="6"/>
<text class="tk-node-label" x="328.5" y="137.5" text-anchor="middle">Round edge</text>
<polygon class="tk-node" points="549.5,100.5 616.5,135.5 549.5,170.5 483,135.5"/>
<text class="tk-node-label" x="549.5" y="137.5" text-anchor="middle">Decision</text>
<rect class="tk-node" x="751" y="20" width="97" height="43.5"/>
<text class="tk-node-label" x="799.5" y="44" text-anchor="middle">Result one</text>
<rect class="tk-node" x="752" y="113.5" width="95.5" height="43.5"/>
<text class="tk-node-label" x="799.5" y="137.5" text-anchor="middle">Result two</text>
</svg>
